# anomaly-detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conda.yaml  docker-compose.yml  pyproject.toml  requirements-server.txt  run_streaming.py  tasks.py
.dvc/: config
.github/workflows/: ci.yml
configs/: config.yaml  streaming.yaml
monitoring/grafana/dashboards/: anomaly-detection.json
monitoring/prometheus/: prometheus.yml
notebooks/: eda_metrics.ipynb
src/alerts/: notifier.py
src/api/: main.py  schemas.py
src/data/: ge_expectations.py  generator.py  validator.py
src/features/: builder.py
src/metrics/: collector.py  drift.py
src/pipeline/: train.py
src/streaming/: consumer.py  producer.py
src/utils/: metrics.py
tests/: test_api.py  test_data.py  test_features.py  test_integration.py  test_models.py  test_streaming.py
